project (tests)

set (CMAKE_CXX_FLAGS "-ansi -Wall -pedantic -pedantic-errors -std=c++98")

add_executable (test test1.c++)
add_executable (test2 test2.c++)
add_executable (test2-server test2-server.c++)
add_executable (test3 test3.c++)
add_executable (test4 test4.c++)
add_executable (test4-server test4-server.c++)
add_executable (test5 test5.c++)
add_executable (test5-server test5-server.c++)
target_link_libraries (test streamcon)
target_link_libraries (test2 streamcon)
target_link_libraries (test2-server streamcon)
target_link_libraries (test3 streamcon xftp)
target_link_libraries (test4 streamcon)
target_link_libraries (test4-server streamcon)
target_link_libraries (test5 streamcon xftp)
target_link_libraries (test5-server streamcon xftp)
